cluster/apps/default/profilarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilarr
  namespace: default
  labels:
    app: profilarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: profilarr
  template:
    metadata:
      labels:
        app: profilarr
    spec:
      containers:
        - name: profilarr
          image: santiagosayshey/profilarr:v1.1.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6868
              name: http
          volumeMounts:
            - mountPath: "/config"
              name: profilarr-data-volume
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              memory: 200Mi
      #          livenessProbe:
      #            httpGet:
      #              path: /
      #              port: http
      #          readinessProbe:
      #            httpGet:
      #              path: /
      #              port: http
      volumes:
        - name: profilarr-data-volume
          persistentVolumeClaim:
            claimName: profilarr-pvc
