cluster/apps/default/profilarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: profilarr-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: profilarr
  ports:
    - protocol: TCP
      port: 6868
      name: http
