cluster/apps/default/profilarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilarr-ingress
  namespace: default
#  annotations:
#    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
#    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
spec:
  ingressClassName: "internal"
  rules:
    - host: "profilarr.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: profilarr-svc
                port:
                  number: 6868
  tls:
    - hosts:
        - "profilarr.${SECRET_DOMAIN}"
